cmake_minimum_required (VERSION 2.8)
project (NOLF2_ObjectDLL)

add_library (NOLF2_ObjectDLL SHARED
	../../Shared/ActivateTypeMgr.cpp
	../ObjectShared/ActiveWorldModel.cpp
	../ObjectShared/AI.cpp
	../ObjectShared/AIAssert.cpp
	../ObjectShared/AIBrain.cpp
	../ObjectShared/AIButeMgr.cpp
	../ObjectShared/AICentralKnowledgeMgr.cpp
	../ObjectShared/AIClassFactory.cpp
	../ObjectShared/AIGoalAbstract.cpp
	../ObjectShared/AIGoalAbstractSearch.cpp
	../ObjectShared/AIGoalAbstractStimulated.cpp
	../ObjectShared/AIGoalAbstractTargeted.cpp
	../ObjectShared/AIGoalAbstractUseObject.cpp
	../ObjectShared/AIGoalAlarm.cpp
	../ObjectShared/AIGoalAnimate.cpp
	../ObjectShared/AIGoalApprehend.cpp
	../ObjectShared/AIGoalAssassinate.cpp
	../ObjectShared/AIGoalAttack.cpp
	../ObjectShared/AIGoalAttackFromCover.cpp
	../ObjectShared/AIGoalAttackfromRandomVantage.cpp
	../ObjectShared/AIGoalAttackfromRoofVantage.cpp
	../ObjectShared/AIGoalAttackfromVantage.cpp
	../ObjectShared/AIGoalAttackFromView.cpp
	../ObjectShared/AIGoalAttackMelee.cpp
	../ObjectShared/AIGoalAttackProne.cpp
	../ObjectShared/AIGoalAttackProp.cpp
	../ObjectShared/AIGoalAttackRanged.cpp
	../ObjectShared/AIGoalAttackRangedDynamic.cpp
	../ObjectShared/AIGoalButeMgr.cpp
	../ObjectShared/AIGoalCatch.cpp
	../ObjectShared/AIGoalCharge.cpp
	../ObjectShared/AIGoalChase.cpp
	../ObjectShared/AIGoalCheckBody.cpp
	../ObjectShared/AIGoalCover.cpp
	../ObjectShared/AIGoalDeflect.cpp
	../ObjectShared/AIGoalDisappearReappear.cpp
	../ObjectShared/AIGoalDisappearReappearEvasive.cpp
	../ObjectShared/AIGoalDistress.cpp
	../ObjectShared/AIGoalDramaDeath.cpp
	../ObjectShared/AIGoalDrawWeapon.cpp
	../ObjectShared/AIGoalExitLevel.cpp
	../ObjectShared/AIGoalFlee.cpp
	../ObjectShared/AIGoalFollow.cpp
	../ObjectShared/AIGoalFollowFootprint.cpp
	../ObjectShared/AIGoalGetBackup.cpp
	../ObjectShared/AIGoalGoto.cpp
	../ObjectShared/AIGoalGuard.cpp
	../ObjectShared/AIGoalHolsterWeapon.cpp
	../ObjectShared/AIGoalInvestigate.cpp
	../ObjectShared/AIGoalLoveKitty.cpp
	../ObjectShared/AIGoalLunge.cpp
	../ObjectShared/AIGoalMenace.cpp
	../ObjectShared/AIGoalMgr.cpp
	../ObjectShared/AIGoalMountedFlashlight.cpp
	../ObjectShared/AIGoalObstruct.cpp
	../ObjectShared/AIGoalPatrol.cpp
	../ObjectShared/AIGoalProximityCommand.cpp
	../ObjectShared/AIGoalPsychoChase.cpp
	../ObjectShared/AIGoalReclassifyToEnemy.cpp
	../ObjectShared/AIGoalRespondToAlarm.cpp
	../ObjectShared/AIGoalRespondToBackup.cpp
	../ObjectShared/AIGoalResurrecting.cpp
	../ObjectShared/AIGoalRetreat.cpp
	../ObjectShared/AIGoalSearch.cpp
	../ObjectShared/AIGoalSentryChallenge.cpp
	../ObjectShared/AIGoalSentryMark.cpp
	../ObjectShared/AIGoalSerumDeath.cpp
	../ObjectShared/AIGoalSleep.cpp
	../ObjectShared/AIGoalSniper.cpp
	../ObjectShared/AIGoalSpecialDamage.cpp
	../ObjectShared/AIGoalTail.cpp
	../ObjectShared/AIGoalTalk.cpp
	../ObjectShared/AIGoalWork.cpp
	../ObjectShared/AIHuman.cpp
	../ObjectShared/AIHumanState.cpp
	../ObjectShared/AIHumanStateApprehend.cpp
	../ObjectShared/AIHumanStateAttackMove.cpp
	../ObjectShared/AIHumanStateAttackProne.cpp
	../ObjectShared/AIHumanStateCatch.cpp
	../ObjectShared/AIHumanStateDeflect.cpp
	../ObjectShared/AIHumanStateDisappearReappear.cpp
	../ObjectShared/AIHumanStateLaunch.cpp
	../ObjectShared/AIHumanStateObstruct.cpp
	../ObjectShared/AIHumanStateResurrecting.cpp
	../ObjectShared/AIHumanStateSentryChallenge.cpp
	../ObjectShared/AIHumanStateSniper.cpp
	../ObjectShared/AIHumanStrategy.cpp
	../ObjectShared/AIHumanStrategyShootStream.cpp
	../ObjectShared/AIHumanStrategyToggleLights.cpp
	../ObjectShared/AIInformationVolumeMgr.cpp
	../ObjectShared/AIMovement.cpp
	../ObjectShared/AIMovementModifier.cpp
	../ObjectShared/AINode.cpp
	../ObjectShared/AINodeDisturbance.cpp
	../ObjectShared/AINodeGuard.cpp
	../ObjectShared/AINodeMgr.cpp
	../ObjectShared/AINodeSensing.cpp
	../ObjectShared/AIPath.cpp
	../ObjectShared/AIPathKnowledgeMgr.cpp
	../ObjectShared/AIPathMgr.cpp
	../ObjectShared/AIRegion.cpp
	../ObjectShared/AIRegionMgr.cpp
	../ObjectShared/AISenseRecorderAbstract.cpp
	../ObjectShared/AISenseRecorderGame.cpp
	../ObjectShared/AISounds.cpp
	../ObjectShared/AISpatialRepresentationMgr.cpp
	../ObjectShared/AIState.cpp
	../ObjectShared/AIStimulusMgr.cpp
	../ObjectShared/AITarget.cpp
	../ObjectShared/AITypes.cpp
	../ObjectShared/AIUtils.cpp
	../ObjectShared/AIVolume.cpp
	../ObjectShared/AIVolumeMgr.cpp
	../ObjectShared/AIVolumeNeighbor.cpp
	../ObjectShared/Alarm.cpp
	../ObjectShared/AmmoBox.cpp
	../ObjectShared/AnimationLex.cpp
	../ObjectShared/AnimationMgr.cpp
	../ObjectShared/AnimationParse.cpp
	../ObjectShared/AnimationParser.cpp
	../../Shared/Animator.cpp
	../ObjectShared/AnimatorPlayer.cpp
	../../Shared/AssertMgr.cpp
	../../Shared/AttachButeMgr.cpp
	../ObjectShared/Attachments.cpp
	../ObjectShared/BanIPMgr.cpp
	../ObjectShared/Body.cpp
	../ObjectShared/BodyState.cpp
	../ObjectShared/Bombable.cpp
	../ObjectShared/Breakable.cpp
	../../Shared/ButeListReader.cpp
	../ObjectShared/ButeTools.cpp
	../ObjectShared/Camera.cpp
	../ObjectShared/Character.cpp
	../../Shared/CharacterAlignment.cpp
	../ObjectShared/CharacterHitBox.cpp
	../ObjectShared/CharacterMgr.cpp
	../ObjectShared/ClientLightFX.cpp
	../../Shared/ClientServerShared.cpp
	../ObjectShared/ClientSFX.cpp
	../ObjectShared/ClientWeaponSFX.cpp
	../ObjectShared/CollectiveRelationMgr.cpp
	../ObjectShared/CommandButeMgr.cpp
	../ObjectShared/CommandMgr.cpp
	../ObjectShared/CommandObject.cpp
	../../Shared/CommonUtilities.cpp
	../ObjectShared/Controller.cpp
	../ObjectShared/CoopMissionMgr.cpp
	../../Shared/CRC32.cpp
	../../Shared/DamageTypes.cpp
	../ObjectShared/DeathMatchMissionMgr.cpp
	../ObjectShared/DeathScene.cpp
	../ObjectShared/DebrisFuncs.cpp
	../../Shared/DebrisMgr.cpp
	../../Shared/DebugLine.cpp
	../ObjectShared/DebugLineSystem.cpp
	../../Shared/DebugNew.cpp
	../ObjectShared/DecisionObject.cpp
	../ObjectShared/Destructible.cpp
	../ObjectShared/DestructibleModel.cpp
	../ObjectShared/Dialogue.cpp
	../ObjectShared/DisplayMeter.cpp
	../ObjectShared/DisplayTimer.cpp
	../ObjectShared/DoomsDayDevice.cpp
	../ObjectShared/DoomsDayMissionMgr.cpp
	../ObjectShared/DoomsDayPiece.cpp
	../ObjectShared/Door.cpp
	../ObjectShared/DoorKnob.cpp
	../ObjectShared/DynamicOccluderVolume.cpp
	../ObjectShared/Editable.cpp
	../ObjectShared/EventCounter.cpp
	../ObjectShared/ExitTrigger.cpp
	../ObjectShared/Explosion.cpp
	../ObjectShared/Fire.cpp
	../../Shared/FXButeMgr.cpp
	../../Shared/FXStructs.cpp
	../ObjectShared/GadgetTarget.cpp
	../ObjectShared/GadgetTargetMgr.cpp
	../../Shared/GameAlloc.cpp
	../ObjectShared/GameBase.cpp
	../ObjectShared/GameBaseLite.cpp
	../../Shared/GameButeMgr.cpp
	../ObjectShared/GameServerShell.cpp
	../ObjectShared/GameStartPoint.cpp
	../ObjectShared/GearItems.cpp
	../../Shared/GlobalMgr.cpp
	../ObjectShared/GlobalServerMgr.cpp
	../ObjectShared/Group.cpp
	../ObjectShared/HHWeaponModel.cpp
	../../../sdk/inc/iltbaseclass.cpp
	../ObjectShared/Intelligence.cpp
	../ObjectShared/IntelMgr.cpp
	../ObjectShared/InventoryButeMgr.cpp
	../ObjectShared/JumpVolume.cpp
	../ObjectShared/Key.cpp
	../ObjectShared/KeyData.cpp
	../ObjectShared/KeyFramer.cpp
	../ObjectShared/KeyItem.cpp
	../../Shared/KeyMgr.cpp
	../ObjectShared/KeyPad.cpp
	../ObjectShared/LaserTrigger.cpp
	../ObjectShared/LightGroup.cpp
	../ObjectShared/Lightning.cpp
	../ObjectShared/LiteObjectMgr.cpp
	../ObjectShared/Lock.cpp
	../../../sdk/inc/ltengineobjects.cpp
	../../../sdk/inc/ltmodule.cpp
	../../../sdk/inc/ltobjref.cpp
	../../../sdk/inc/ltquatbase.cpp
	../ObjectShared/Mine.cpp
	../../Shared/MissionButeMgr.cpp
	../../Shared/ModelButeMgr.cpp
	../ObjectShared/ModItem.cpp
	../ObjectShared/MusicMgr.cpp
	../../Shared/NetDefs.cpp
	../ObjectShared/NodeLine.cpp
	../ObjectShared/NoPlayerTrigger.cpp
	../ObjectShared/ObjectiveSprite.cpp
	../ObjectShared/ObjectRelationMgr.cpp
	../ObjectShared/ObjectRemover.cpp
	../ObjectShared/ObjectTemplateMgr.cpp
	../../Shared/ParsedMsg.cpp
	../ObjectShared/ParticleSystem.cpp
	../ObjectShared/PickupItem.cpp
	../ObjectShared/PlayerLure.cpp
	../ObjectShared/PlayerObj.cpp
	../ObjectShared/PlayerTracker.cpp
	../ObjectShared/PlayerTrigger.cpp
	../ObjectShared/PlayerVehicle.cpp
	../ObjectShared/Point.cpp
	../ObjectShared/PolyGrid.cpp
	../ObjectShared/PolyGridModifier.cpp
	../ObjectShared/PowerArmor.cpp
	../../Shared/ProfileUtils.cpp
	../ObjectShared/Projectile.cpp
	../ObjectShared/ProjectileTypes.cpp
	../ObjectShared/Prop.cpp
	../ObjectShared/PropType.cpp
	../ObjectShared/PropTypeMgr.cpp
	../ObjectShared/RadarObject.cpp
	../../Shared/RadarTypeMgr.cpp
	../ObjectShared/RandomSpawner.cpp
	../ObjectShared/RelationButeMgr.cpp
	../ObjectShared/RelationMgr.cpp
	../ObjectShared/RotatingDoor.cpp
	../ObjectShared/RotatingSwitch.cpp
	../ObjectShared/RotatingWorldModel.cpp
	../../Shared/SaveLoadMgr.cpp
	../ObjectShared/ScaleSprite.cpp
	../ObjectShared/Scanner.cpp
	../ObjectShared/ScatterVolume.cpp
	../ObjectShared/ScmdServer.cpp
	../ObjectShared/ScreenShake.cpp
	../ObjectShared/Searchable.cpp
	../../Shared/SearchItemMgr.cpp
	../ObjectShared/SearchLight.cpp
	../ObjectShared/SearchProp.cpp
	../ObjectShared/SecurityCamera.cpp
	../ObjectShared/ServerAssetMgr.cpp
	../ObjectShared/ServerButeMgr.cpp
	../ObjectShared/ServerMark.cpp
	../ObjectShared/ServerMissionMgr.cpp
	../ObjectShared/ServerSaveLoadMgr.cpp
	../ObjectShared/ServerSoundFX.cpp
	../ObjectShared/ServerSoundMgr.cpp
	../ObjectShared/ServerSpecialFX.cpp
	../ObjectShared/ServerTrackedNodeContext.cpp
	../ObjectShared/ServerTrackedNodeMgr.cpp
	../ObjectShared/ServerUtilities.cpp
	../ObjectShared/SFXFuncs.cpp
	../../Shared/SharedFXStructs.cpp
	../../Shared/SharedMission.cpp
	../../Shared/SharedMovement.cpp
	../../Shared/SharedScoring.cpp
	../ObjectShared/SinglePlayerMissionMgr.cpp
	../ObjectShared/Skills.cpp
	../../Shared/SkillsButeMgr.cpp
	../ObjectShared/SlidingDoor.cpp
	../ObjectShared/SlidingSwitch.cpp
	../ObjectShared/SlidingWorldModel.cpp
	../ObjectShared/SnowVolume.cpp
	../ObjectShared/SoundButeFX.cpp
	../../Shared/SoundButeMgr.cpp
	../../Shared/SoundFilterMgr.cpp
	../../Shared/SoundMgr.cpp
	../ObjectShared/Sparam.cpp
	../ObjectShared/Spawner.cpp
	../ObjectShared/Speaker.cpp
	../ObjectShared/SpinningWorldModel.cpp
	../ObjectShared/Sprinkles.cpp
	../../Shared/stacktrace.cpp
	../ObjectShared/StartupCommand.cpp
	../ObjectShared/Stdafx.cpp
	../ObjectShared/Steam.cpp
	../../Shared/SurfaceFunctions.cpp
	../../Shared/SurfaceMgr.cpp
	../ObjectShared/Switch.cpp
	../ObjectShared/TeamDeathMatchMissionMgr.cpp
	../../Shared/TeamMgr.cpp
	../ObjectShared/TeleportPoint.cpp
	../../Shared/TemplateList.cpp
	../ObjectShared/TextureFX.cpp
	../../Shared/TrackedNode.cpp
	../../Shared/TrackedNodeContext.cpp
	../../Shared/TrackedNodeControlFn.cpp
	../../Shared/TrackedNodeMgr.cpp
	../ObjectShared/TransitionAggregate.cpp
	../ObjectShared/TransitionArea.cpp
	../ObjectShared/TransitionMgr.cpp
	../ObjectShared/Trigger.cpp
	../../Shared/TriggerTypeMgr.cpp
	../../Shared/UberAssert.cpp
	../../Shared/VersionMgr.cpp
	../ObjectShared/VolumeBrush.cpp
	../ObjectShared/VolumeBrushTypes.cpp
	../ObjectShared/VolumeEffect.cpp
	../../Shared/WaveFn.cpp
	../ObjectShared/Weapon.cpp
	../ObjectShared/WeaponItems.cpp
	../../Shared/WeaponMgr.cpp
	../ObjectShared/Weapons.cpp
	../../Shared/WinUtil.cpp
	../ObjectShared/WorldModel.cpp
	../ObjectShared/WorldModelDebris.cpp
	../ObjectShared/WorldProperties.cpp
	GlobalsInit.cpp
	Stdafx.cpp
	TO2GameServerShell.cpp
	../../Shared/TO2/TO2MissionButeMgr.cpp
	../../Shared/TO2/TO2VersionMgr.cpp)
set_target_properties(NOLF2_ObjectDLL 
	PROPERTIES OUTPUT_NAME Object
			   SUFFIX .lto)
add_definitions (-DNOPS2 -D_SERVERBUILD -DMEMTRACK_SERVER -D_NO_AI_ASSERT)
include_directories (../ObjectShared
	../../../sdk/inc
	../../../libs/MFCStub
	../../../libs/stdlith
	../../../libs/ButeMgr
	../../../libs/CryptMgr
	../../../libs/lith
	../../../libs/RegMgr
	../../../libs/ServerDir
	../../Shared
	../../Shared/TO2)
target_link_libraries(NOLF2_ObjectDLL
	ltmem
	ButeMgr
	CryptMgr
	Lib_Lith
	MFCStub
	RegMgr
	Lib_StdLith
	ServerDir)
	
if(MSVC)
	set_target_properties(NOLF2_ObjectDLL PROPERTIES COMPILE_FLAGS "/wd4996")
endif(MSVC)