add_library(Lib_UI STATIC
	cuibase.cpp
	cuibase_impl.cpp
	cuibitmapfont.cpp
	cuibutton.cpp
	cuibutton_impl.cpp
	cuicheck.cpp
	cuicheck_impl.cpp
	sys/d3d/cuidebug.cpp
	cuidropdownlist.cpp
	cuidropdownlist_impl.cpp
	cuifont_impl.cpp
	cuifontmanager.cpp
	cuiformattedpolystring.cpp
	cuiformattedpolystring_impl.cpp
	cuiinterval.cpp
	cuiinterval_impl.cpp
	cuilinklist.cpp
	cuilist.cpp
	cuilist_impl.cpp
	cuimessagequeue.cpp
	cuioption.cpp
	cuioption_impl.cpp
	cuipolystring.cpp
	cuipolystring_impl.cpp
	cuipolytex.cpp
	cuiprogress.cpp
	cuiprogress_impl.cpp
	cuiredblack.cpp
	cuirenderstate.cpp
	cuislider.cpp
	cuislider_impl.cpp
	cuistaticimage.cpp
	cuistaticimage_impl.cpp
	cuistatictext.cpp
	cuistatictext_impl.cpp
	cuivectorfont.cpp
	cuiwidget.cpp
	cuiwidget_impl.cpp
	cuiwidgetmanager.cpp
	cuiwindow.cpp
	cuiwindow_impl.cpp)
include_directories ( .
	sys/d3d)