add_library(LIB_D3DRender STATIC
	../shadows/d3dshadowtexture.cpp
	3d_ops.cpp
	aabb.cpp
	common_draw.cpp
	common_init.cpp
	common_stuff.cpp
	d3d_device.cpp
	d3d_device_wrapper.cpp
	d3d_draw.cpp
	d3d_drawsky.cpp
	d3d_init.cpp
	d3d_optimizedsurface.cpp
	d3d_renderblock.cpp
	d3d_rendershader_dynamiclight.cpp
	d3d_rendershader_glow.cpp
	d3d_rendershader_gouraud.cpp
	d3d_rendershader_gouraud_fullbright.cpp
	d3d_rendershader_lightmap.cpp
	d3d_renderstatemgr.cpp
	d3d_renderstyle.cpp
	d3d_renderstyleinterface.cpp
	d3d_renderworld.cpp
	d3d_renderworld_occluder.cpp
	#d3d_rendobj_spritearray.cpp
	d3d_shell.cpp
	d3d_surface.cpp
	d3d_texture.cpp
	d3d_utils.cpp
	d3d_viewparams.cpp
	d3dmeshrendobj_rigid.cpp
	d3dmeshrendobj_skel.cpp
	d3dmeshrendobj_vertanim.cpp
	devicelightlist.cpp
	dirtyrect.cpp
	draw_canvas.cpp
	drawlight.cpp
	drawlinesystem.cpp
	drawmodel.cpp
	#drawmodelshadows.cpp
	drawobjects.cpp
	drawparticles.cpp
	drawparticles_A.cpp
	drawpolygrid.cpp
	drawsky.cpp
	drawsprite.cpp
	drawvolumeeffects.cpp
	drawworldmodel.cpp
	LTEffectImpl.cpp
	LTEffectInclude.cpp
	lteffectshadermgr.cpp
	ltpixelshadermgr.cpp
	LTShaderDeviceStateImp.cpp
	ltvertexshadermgr.cpp
	memstats_world.cpp
	modeldebug.cpp
	modelshadowshader.cpp
	objectgroupmgr.cpp
	precompile.cpp
	relevantlightlist.cpp
	rendererconsolevars.cpp
	rendererframestats.cpp
	renderlight.cpp
	rendermodelinfolist.cpp
	rendermodelpiecelist.cpp
	rendershadowlist.cpp
	renderstylelookuptables.cpp
	renderstylemap.cpp
	rendertarget.cpp
	rendertargetmgr.cpp
	screenglowmgr.cpp
	setupmodel.cpp
	setuptouchinglights.cpp
	SimD_Transforms.cpp
	SimD_Utilities.cpp
	tagnodes.cpp
	texturescriptinstance.cpp
	texturescriptinterpreter.cpp
	texturescriptmgr.cpp
	texturescriptvarmgr.cpp
	VertexBufferController.cpp)
include_directories (server/src)
set_property(TARGET LIB_D3DRender
	PROPERTY COMPILE_DEFINITIONS_DEBUG D3D_DEBUG_INFO)